--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,6 +8,16 @@
         android:title="@string/action_refresh"
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_sort_by_name"
+        android:orderInCategory="100"
+        android:title="@string/action_sort_by_name"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_sort_by_date"
+        android:orderInCategory="100"
+        android:title="@string/action_sort_by_date"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
