Added autoCapitalize feature

--- a/app/src/main/res/layout/editor_fragment.xml
+++ b/app/src/main/res/layout/editor_fragment.xml
@@ -57,7 +57,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/etTitle_hint"
-        android:inputType="textPersonName" />
+        android:inputType="textCapWords|textPersonName" />
 
     <EditText
         android:id="@+id/etEditor"
@@ -65,7 +65,6 @@
         android:layout_height="match_parent"
         android:ems="10"
         android:gravity="top"
-        android:inputType="textMultiLine"
-        android:scrollbars="horizontal|vertical"
-        android:singleLine="false" />
+        android:inputType="textCapSentences|textMultiLine"
+        android:scrollbars="horizontal|vertical" />
 </LinearLayout>
