--- a/app/src/main/res/layout/editor_fragment.xml
+++ b/app/src/main/res/layout/editor_fragment.xml
@@ -18,35 +18,37 @@
 
         <Button
             android:id="@+id/btUndo"
-            android:layout_width="32dp"
-            android:layout_margin="4dp"
-            android:layout_height="32dp"
-            android:background="@drawable/ic_undo"
-            android:enabled="false" />
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_margin="8dp"
+            android:background="@drawable/ic_undo_white_24dp"
+            android:enabled="false"
+            android:padding="8dp" />
 
         <Button
             android:id="@+id/btRedo"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_margin="4dp"
-            android:background="@drawable/ic_redo"
+            android:background="@drawable/ic_redo_white_24dp"
             android:enabled="false" />
-
-        <Button
-            android:id="@+id/btSave"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_margin="4dp"
-            android:background="@android:drawable/ic_menu_save"
-            android:enabled="true" />
-
         <Button
             android:id="@+id/btShare"
-            android:layout_width="32dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_marginLeft="20dp"
-            android:layout_height="32dp"
-            android:background="@drawable/ic_share"
+            android:background="@drawable/ic_share_white_24dp"
             android:enabled="true" />
+        <Button
+            android:id="@+id/btSave"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_margin="4dp"
+            android:layout_gravity="right"
+            android:background="@drawable/ic_save_white_24dp"
+            android:enabled="true" />
+
+
 
     </android.support.v7.widget.Toolbar>
 
