Implemented mockup UI

--- a/html/templates/sidebar-folder.html
+++ b/html/templates/sidebar-folder.html
@@ -1,31 +1,7 @@
-            <li class="nav-item">
-                <a class="nav-link" href="test-folder-1.html">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Test Folder 1</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="test-folder-1.html">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Test Folder 2</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="test-folder-1.html">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Test Folder 3 </span>
-                </a>
-            </li>
-             <li class="nav-item"> <a class="nav-link" href="#"> <i class="fas fa-fw fa-folder"></i> <span>This is a very long long folder name</span> </a> </li>
-             <li class="nav-item"> <a class="nav-link" href="#"> <i class="fas fa-fw fa-folder"></i> <span>Folder 5</span> </a> </li>
-             <li class="nav-item"> <a class="nav-link" href="#"> <i class="fas fa-fw fa-folder"></i> <span>Folder 6</span> </a> </li>
-             <li class="nav-item"> <a class="nav-link" href="#"> <i class="fas fa-fw fa-folder"></i> <span>Folder 7</span> </a> </li>
-             <li class="nav-item"> <a class="nav-link" href="#"> <i class="fas fa-fw fa-folder"></i> <span>Folder 8</span> </a> </li>
-             <li class="nav-item"> <a class="nav-link" href="#"> <i class="fas fa-fw fa-folder"></i> <span>Folder 9</span> </a> </li>
-             <li class="nav-item"> <a class="nav-link" href="#"> <i class="fas fa-fw fa-folder"></i> <span>Folder 10</span> </a> </li>
-             <li class="nav-item"> <a class="nav-link" href="#"> <i class="fas fa-fw fa-folder"></i> <span>Folder 11</span> </a> </li>
-             <li class="nav-item"> <a class="nav-link" href="#"> <i class="fas fa-fw fa-folder"></i> <span>Folder 12</span> </a> </li>
-             <li class="nav-item"> <a class="nav-link" href="#"> <i class="fas fa-fw fa-folder"></i> <span>Folder 13</span> </a> </li>
-             <li class="nav-item"> <a class="nav-link" href="#"> <i class="fas fa-fw fa-folder"></i> <span>Folder 14</span> </a> </li>
-             <li class="nav-item"> <a class="nav-link" href="#"> <i class="fas fa-fw fa-folder"></i> <span>Folder 15</span> </a> </li>
-
+<li class="nav-item {active}">
+    <a class="nav-link sidebar-folder" href="#" data-id="{id}">
+        <i class="fas fa-fw fa-folder"></i>
+            <span>{basename}</span>
+        <div class="d-none" id="sidebar-folder-item-path-{id}">{path}</div>
+    </a>
+</li>
