--- a/html/templates/editor.html
+++ b/html/templates/editor.html
@@ -1,5 +1,5 @@
 <div class="col d-flex flex-column"> <div class="card shadow h-100 d-flex flex-column"> <div class="card-header py-3 d-flex">
-    <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2" value="{basename}">
+    <input type="text" class="form-control border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2" value="{basename}">
     </div>
         <div class="card-body flex-grow-1 d-flex flex-column">
             <textarea id="markdown-editor">{content}</textarea>
