--- a/html/templates/folderView-file.html
+++ b/html/templates/folderView-file.html
@@ -3,7 +3,7 @@
         <div class="card-body">
             <div class="row no-gutters align-items-center">
                 <div class="col mr-2 div-file-open" data-id="{id}">
-                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                    <div class="text-xs font-weight-bold text-uppercase mb-1">
                         {basename}
                     </div>
                     <div class="h6 mb-0 text-gray-800">
