--- a/html/templates/settings.html
+++ b/html/templates/settings.html
@@ -6,7 +6,7 @@
             <button type="button" id="btn-add-folder" class="btn btn-sm float-left btn-circle">
                 <i class="fas fa-plus"></i>
             </button>
-            <h6 class="pl-5 mt-2 font-weight-bold text-primary">Folders</h6>
+            <h6 class="pl-5 mt-2 font-weight-bold">Folders</h6>
         </div>
         <div class="card-body" id="folders">
         </div>
