--- a/html/templates/folderView.html
+++ b/html/templates/folderView.html
@@ -7,7 +7,7 @@
                 <i class="fas fa-plus"></i>
                 <div id="div-folderView-path" class="d-none">{path}</div>
             </button>
-            <h6 class="pl-5 mt-2 font-weight-bold text-primary">{basename}</h6>
+            <h6 class="pl-5 mt-2 font-weight-bold">{basename}</h6>
         </div>
         <div class="card-body" id="files">
         </div>
