Unified js and css files into 1

--- a/html/scss/styles.scss
+++ b/html/scss/styles.scss
@@ -3,6 +3,8 @@
 
 // Import Bootstrap
 @import "../vendor/bootstrap/scss/bootstrap.scss";
+@import "../vendor/fontawesome-free/css/all.min.css";
+@import "../vendor/easymde/easymde.min.css";
 
 // Import Custom SB Admin 2 Mixins and Components
 @import "mixins.scss";
