Implemented sort and human readable folder names

--- a/html/templates/folderView.html
+++ b/html/templates/folderView.html
@@ -9,7 +9,7 @@
             </button>
             <h6 class="pl-5 mt-2 font-weight-bold">{basename}</h6>
         </div>
-        <div class="card-body" id="files">
+        <div class="card-body" id="items">
         </div>
     </div>
 </div>
