--- a/html/templates/navbar-folderView.html
+++ b/html/templates/navbar-folderView.html
@@ -9,3 +9,74 @@
         </div>
     </div>
 </form>
+<ul class="navbar-nav ml-auto">
+    <li class="nav-item dropdown no-arrow d-sm-none">
+        <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-search fa-fw"></i>
+        </a>
+        <!-- Dropdown - Search -->
+        <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in" aria-labelledby="searchDropdown">
+            <form class="form-inline mr-auto w-100 navbar-search">
+                <div class="input-group">
+                    <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                        <button class="btn btn-primary" type="button">
+                            <i class="fas fa-search fa-sm"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </li>
+    <li class="nav-item dropdown no-arrow mx-1">
+        <a class="nav-link dropdown-toggle" href="#" id="sortDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-arrow-down-a-z fa-fw"></i>
+        </a>
+        <!-- Dropdown - Sort -->
+        <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="sortDropdown">
+            <h6 class="dropdown-header">
+                Sort Order
+            </h6>
+            <a class="dropdown-item d-flex align-items-center" href="#">
+                <div class="mr-3">
+                    <div class="icon-circle bg-primary">
+                        <i class="fas fa-arrow-down-a-z text-white"></i>
+                    </div>
+                </div>
+                <div>
+                    <span class="font-weight-bold">Name A - Z</span>
+                </div>
+            </a>
+            <a class="dropdown-item d-flex align-items-center" href="#">
+                <div class="mr-3">
+                    <div class="icon-circle bg-primary">
+                        <i class="fas fa-arrow-up-z-a text-white"></i>
+                    </div>
+                </div>
+                <div>
+                    <span class="font-weight-bold">Name Z - A</span>
+                </div>
+            </a>
+            <a class="dropdown-item d-flex align-items-center" href="#">
+                <div class="mr-3">
+                    <div class="icon-circle bg-primary">
+                        <i class="fas fa-arrow-down-short-wide text-white"></i>
+                    </div>
+                </div>
+                <div>
+                    <span class="font-weight-bold">Date Oldest First</span>
+                </div>
+            </a>
+            <a class="dropdown-item d-flex align-items-center" href="#">
+                <div class="mr-3">
+                    <div class="icon-circle bg-primary">
+                        <i class="fas fa-arrow-up-wide-short text-white"></i>
+                    </div>
+                </div>
+                <div>
+                    <span class="font-weight-bold">Date Newest First</span>
+                </div>
+            </a>
+        </div>
+    </li>
+</ul>
