--- a/html/templates/navbar-editor.html
+++ b/html/templates/navbar-editor.html
@@ -1,6 +1,6 @@
 <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 ps-md-4 mw-100 navbar-search">
     <div class="input-group">
-        <input type="text" class="form-control border-0 small" placeholder="Search for..."
+        <input type="text" class="file-search-input form-control border-0 small" placeholder="Search for..."
             aria-label="Search" aria-describedby="basic-addon2">
         <div class="input-group-append">
             <button class="btn btn-primary" type="button">
@@ -21,7 +21,7 @@
             aria-labelledby="searchDropdown">
             <form class="form-inline mr-auto w-100 navbar-search">
                 <div class="input-group">
-                    <input type="text" class="form-control border-0 small"
+                    <input type="text" class="file-search-input form-control border-0 small"
                         placeholder="Search for..." aria-label="Search"
                         aria-describedby="basic-addon2">
                     <div class="input-group-append">
