Implemented editor search

--- a/html/scss/_editor.scss
+++ b/html/scss/_editor.scss
@@ -30,3 +30,10 @@
     }
   }
 }
+
+.search-highlight {
+    background-color: yellow;
+    /* Add other styles as needed, e.g., */
+    /* color: black; */
+    /* border: 1px solid orange; */
+}
