--- a/html/templates/navbar-editor.html
+++ b/html/templates/navbar-editor.html
@@ -39,4 +39,9 @@
             <i class="fas fa-save"></i>
         </a>
     </li>
+    <li class="nav-item dropdown no-arrow mx-1">
+        <a href="#" class="nav-link" id="btn-editor-toolbar">
+            <i class="fas fa-ellipsis-vertical"></i>
+        </a>
+    </li>
 </ul>
