Enabled autocapitalize="words" for filename editor Editor updates filename field when save is done in case unsafecharacters have been removed by the java backend Implemented editor rename feature Fixed the issue editor filename not getting updated with the actual saved name after save Implemented file delete confirmation bug Implemented folder release confirmation bug (actual folder release in java is not implemented yet)

--- a/html/templates/editor.html
+++ b/html/templates/editor.html
@@ -1,5 +1,12 @@
 <div class="col d-flex flex-column"> <div class="card shadow h-100 d-flex flex-column"> <div class="card-header py-3 d-flex">
-    <input id="filename" type="text" class="form-control border-0 small" placeholder="Enter filename" aria-label="Search" aria-describedby="basic-addon2" value="{basename}">
+    <input  id="filename"
+            type="text"
+            class="form-control border-0 small"
+            placeholder="Enter filename"
+            aria-label="Search"
+            aria-describedby="basic-addon2"
+            value="{basename}"
+            autocapitalize="words">
     <div id="editor-path" class="d-none">{path}</div>
     </div>
         <div class="card-body flex-grow-1 d-flex flex-column">
