--- a/html/templates/folderView-file.html
+++ b/html/templates/folderView-file.html
@@ -3,9 +3,7 @@
         <div class="card-body">
             <div class="row no-gutters align-items-center">
                 <div class="col mr-2 div-file-open" data-id="{id}">
-                    <div class="text-xs font-weight-bold text-uppercase mb-1">
-                        {basename}
-                    </div>
+                    <div id="div-filename-{id}" class="text-xs font-weight-bold text-uppercase mb-1">{basename}</div>
                     <div class="h6 mb-0 text-gray-800">
                         <code>{date}</code>
                         <div class="d-none" id="div-file-path-{id}">{path}</div>
