--- a/html/templates/settings-folder.html
+++ b/html/templates/settings-folder.html
@@ -1,11 +1,9 @@
-<div class="mb-4">
+<div class="mb-4" id="div-folder-{id}">
     <div class="card border-left-primary shadow h-100 py-2">
         <div class="card-body">
             <div class="row no-gutters align-items-center">
                 <div class="col mr-2">
-                    <div class="text-xs font-weight-bold text-uppercase mb-1">
-                        {basename}
-                    </div>
+                    <div class="text-xs font-weight-bold text-uppercase mb-1" id="div-folder-name-{id}">{basename}</div>
                     <div class="h6 mb-0 text-gray-800">
                         <code id="code-folder-path-{id}">{path}</code>
                     </div>
